<resources>
    <string name="app_name">Smartherd News App</string>
    <string name="favourite_icon_fab">Favourite icon fab</string>
    <string name="search">Search…</string>
    <string name="article_image">Article image thumbnail</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="published_at">Published at</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
</resources>